# Incrementally_Learning_and_Exploiting_Inverse_Dynamics

./: README.md  README_instruction.txt
Regressors/: BlockInvBudgetGPRegressor.m  CholBudgetGPRegressor.m  GPRegressor.m  I_SSGPRegressor.m  IncBudgetGPRegressor.m  RF_GPRegressor.m
Step1_RBD/: RigidBodyFunction.m
Step2_Incremental_Learning/: CholBudgetGPRegressor.m  Compute_Gram.asv  GPRTestingSet.fig  GPRTrainingSet.fig  GPRegressor.asv  GPRegressor.m  GP_predict.asv  GP_predict.m  GP_train.asv  GP_train.m  GaussianProcess.asv  GaussianProcess.m  IncBudgetGPRegressor.asv  IncBudgetGPRegressor.m  IncrementalGPRTestingSet.fig  IncrementalGPRTrainingSet.fig  IncrementalGPRegressor.asv  IncrementalGPRegressor.m  Incremental_GPR.asv  Incremental_GPR.m  InsertNewData.m  cholesky_update.m  test.m
Step3_Active_learning/: Active_GPR.m  CholBudgetGPRegressor.m  TestChol.m  neighbours.m
Step3_Input_Selection/: Active_GPR.m  Cholesky_Input_selection.m  Error_Comparison_Cholesky.fig  RF_Input_selection.m  compute_error.m  gradient_prop.m  (+1 more)
Task9_Trajectory_generation/learning/nuSVR/: 1_GRID_SEARCH_CV.sh  2_TRAIN_MODELS.sh  3_TRAIN_ACC.sh  4_TEST_MODELS.sh  5_SAVE.sh  6_TEST.sh  CMakeLists.txt  README_instructions.txt
Task9_Trajectory_generation/learning/nuSVR/crossValidationFiles/: hParamSearch.py
Task9_Trajectory_generation/learning/nuSVR/testFiles/: testModels.cpp  testModelsOptional.cpp
Task9_Trajectory_generation/learning/nuSVR/tools/: convert2sparse.py  save.py  transport.py
Task9_Trajectory_generation/learning/nuSVR/trainFiles/: trainModelAcc.cpp  trainModels.cpp
(+132 files in other folders)
